--- a/styles.css
+++ b/styles.css
@@ -231,8 +231,12 @@ main {
     background-color: var(--editor-background);
 }
 
-header {
+.header {
     display: flex;
+}
+
+.hidden-header-paragraph {
+    display: none;
 }
 
 .profile-pic {
@@ -264,6 +268,7 @@ header {
     margin: 1.5rem 0;
     border-width: 0px;
     color: var(--line-break);
+    overflow: hidden;
 }
 
 .line-break::before {
@@ -274,6 +279,7 @@ header {
 .line-break::after {
     content: "--------------------------------------------------------------";
     font-variant-ligatures: none;
+    overflow-x: hidden;
 }
 
 .section-header {
@@ -344,6 +350,10 @@ article {
     color: var(--accent-hover);
 }
 
+.mobile-title {
+    display: none;
+}
+
 footer {
     display: flex;
     justify-content: space-between;
@@ -405,4 +415,112 @@ footer {
 .theme-picker > option {
     background-color: #1e1f1c;
     color: #cfcfc2;
+}
+
+@media (max-width: 599px) {
+    .editor {
+        padding-left: 5ch;
+        padding-right: 2ch;
+    }
+    .editor-content {
+        max-width: 44ch;
+    }
+
+    .profile-pic {
+        width: 3.9rem;
+        height: 3.9rem;
+    }
+
+    .header-paragraph {
+        display: none;
+    }
+    .hidden-header-paragraph {
+        display: block;
+    }
+
+    .header-text h1 {
+        font-size: 1.09rem;
+    }
+
+    .occupation {
+        max-width: 20ch;
+    }
+
+    p {
+        line-height: 1.4;
+    }
+
+    p,
+    .more-articles,
+    .project-link-mobile {
+        font-size: 0.875rem;
+    }
+
+    article {
+        flex-direction: column;
+    }
+
+    .article-img {
+        width: 18.6rem;
+        height: 10.5rem;
+    }
+
+    .article-description {
+        min-height: 0;
+    }
+
+    .project-img {
+        width: 2.6rem;
+        height: 2.6rem;
+    }
+
+    .project-title {
+        display: none;
+    }
+
+    .project-link {
+        display: none;
+    }
+
+    .flex-mobile-title {
+        display: flex;
+    }
+
+    .mobile-title {
+        display: block;
+        padding-bottom: 1rem;
+    }
+
+    .mobile-title h3 {
+        line-height: 0.8;
+    }
+
+    .project-link-mobile {
+        border-bottom: 1px solid var(--accent);
+        color: var(--accent);
+    }
+
+    .project-link-mobile:hover {
+        border-bottom: 1px solid var(--accent-hover);
+        color: var(--accent-hover);
+    }
+
+    .section-header,
+    .article-title a {
+        font-size: 0.9rem;
+    }
+
+    footer {
+        min-height: 0;
+        flex-direction: column;
+    }
+
+    .social-links {
+        flex-direction: column;
+        padding-bottom: 1.5rem;
+    }
+
+    .bullet {
+        display: none;
+    }
 }
